sprite now working!

--- a/default.html
+++ b/default.html
@@ -5,10 +5,13 @@
     <title>Web Application Framework (WAF)</title>
  
     <!-- source files for development -->
-    <!-- <link href="/css/default.css" rel="stylesheet" /> -->
-    <script src="customObject.js"></script>
-    <script src="game/css/game.js"></script>
-    <script src="game/game1.js"></script>
+    <link rel="stylesheet" type="text/css" href="game/css/css-game.css">
+    
+    <script src="utils/customObject.js"></script>
+    <script src="game/gameTime.js"></script>
+    <script src="game/game.js"></script>
+    <script src="game/css/graphics/sprite.js"></script>
+    <script src="game/css/game1.js"></script>
     <script src="program.js"></script>
  
     <!-- concatenated / minified source for production -->
@@ -17,6 +20,13 @@
 
 <body onload="program.main()">
     <p>Content goes here</p>
-    <div id="element1">test</div>
+    <div id="element1"></div>
+    <div id="element2"></div>
+    
+    <div id="sprite1" class="sprite1 goomba"></div>
+    <div id="sprite2" class="sprite2 goomba"></div>
+    <div id="sprite3" class="sprite3 goomba"></div>
+    <div id="sprite4" class="sprite4 goomba"></div>
+    <div id="sprite5" class="sprite5 goomba"></div>
 </body> 
 </html>  
