touch support added

--- a/default.html
+++ b/default.html
@@ -14,6 +14,8 @@
     
     <script src="inputs/keyboardState.js"></script>
     <script src="inputs/keyboard.js"></script>
+    <script src="inputs/touchState.js"></script>
+    <script src="inputs/touch.js"></script>
     
     <script src="game/gameTime.js"></script>
     <script src="game/game.js"></script>
@@ -26,7 +28,7 @@
     <!-- <script src="production/app.js"></script> -->
 </head>
 
-<body onload="program.main()">
+<body id="css_game" onload="program.main()">
     <div id="status" class="charmBarTop">
         <p>Status of the application:</p>
         <div id="element1"></div>
