background scroll left and right

--- a/default.html
+++ b/default.html
@@ -36,9 +36,11 @@
         <div id="element2"></div>
     </div>
     
-    <div id="tile0"></div><div id="tile1"></div><div id="tile2"></div><div id="tile3"></div>
-    <div id="tile4"></div><div id="tile5"></div><div id="tile6"></div><div id="tile7"></div>
-    <div id="tile8"></div><div id="tile9"></div><div id="tile10"></div><div id="tile11"></div>
+    <div id="backgroundWrapper" class="backgroundWrapper">
+        <div id="tile0"></div>  <div id="tile1"></div>  <div id="tile2"></div>  <div id="tile3"></div>  <div id="tile4"></div>  <div id="tile5"></div>
+        <div id="tile6"></div>  <div id="tile7"></div>  <div id="tile8"></div>  <div id="tile9"></div>  <div id="tile10"></div> <div id="tile11"></div>
+        <div id="tile12"></div> <div id="tile13"></div> <div id="tile14"></div> <div id="tile15"></div> <div id="tile16"></div> <div id="tile17"></div>
+    </div>
     
     <div id="sprite0" class="sprite0 mario"></div>
     <div id="sprite1" class="sprite1 goomba"></div>
