--- a/default.html
+++ b/default.html
@@ -40,6 +40,8 @@
         <div id="tile0"></div>  <div id="tile1"></div>  <div id="tile2"></div>  <div id="tile3"></div>  <div id="tile4"></div>  <div id="tile5"></div>
         <div id="tile6"></div>  <div id="tile7"></div>  <div id="tile8"></div>  <div id="tile9"></div>  <div id="tile10"></div> <div id="tile11"></div>
         <div id="tile12"></div> <div id="tile13"></div> <div id="tile14"></div> <div id="tile15"></div> <div id="tile16"></div> <div id="tile17"></div>
+        <div id="tile18"></div> <div id="tile19"></div> <div id="tile20"></div> <div id="tile21"></div> <div id="tile22"></div> <div id="tile23"></div>
+        <div id="tile24"></div> <div id="tile25"></div> <div id="tile26"></div> <div id="tile27"></div> <div id="tile28"></div> <div id="tile29"></div>
     </div>
     
     <div id="sprite0" class="sprite0 mario"></div>
