--- a/test/background/default.html
+++ b/test/background/default.html
@@ -20,6 +20,7 @@
     <script src="../../game/gameTime.js"></script>
     <script src="../../game/game.js"></script>
     <script src="../../game/css/graphics/backgroundImage.js"></script>
+    <script src="../../game/css/graphics/spriteImage.js"></script>
     <script src="game1.js"></script>
     
     <script src="program.js"></script>
