add new enemy to starFighter

--- a/test/starFighter/default.html
+++ b/test/starFighter/default.html
@@ -25,6 +25,8 @@
     <script src="pulse.js"></script>
     <script src="starship.js"></script>
     <script src="asteroid.js"></script>
+    <script src="waveship.js"></script>
+    <script src="rocketship.js"></script>
     <script src="enemy.js"></script>
     <script src="game1.js"></script>
     
