network basic; minor inputs bug corrected

--- a/test/starFighter/default.html
+++ b/test/starFighter/default.html
@@ -20,6 +20,8 @@
     <script src="../../inputs/touchState.js"></script>
     <script src="../../inputs/touch.js"></script>
     
+    <script src="../../network/websocketConnection.js"></script>
+    
     <script src="../../game/rectangle.js"></script>
     <script src="../../game/gameTime.js"></script>
     <script src="../../game/game.js"></script>
